--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -1,4 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+
     android:gravity="center_vertical"
     android:layout_gravity="left"
     android:layout_height="wrap_content"
@@ -6,30 +9,65 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <TextView
-        android:id="@+id/detail_rate_textview"
-        android:layout_gravity="left"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:textSize="24sp"
-        android:text="6.9/10"/>
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/info_view"
+        android:layout_gravity="center"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        card_view:cardUseCompatPadding="true"
+        card_view:cardCornerRadius="4dp">
+        <LinearLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:padding="16dp">
+            <TextView
+                android:id="@+id/detail_rate_textview"
+                android:layout_gravity="left"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:textSize="22sp"
+                android:text="6.9/10"/>
 
-    <TextView
-        android:fontFamily="sans-serif-light"
-        android:layout_gravity="left"
-        android:id="@+id/detail_release_date_textview"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:textSize="22sp"
-        android:text="2015"/>
+            <TextView
+                android:layout_gravity="left"
+                android:id="@+id/detail_release_date_textview"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:textSize="22sp"
+                android:text="2015"/>
+         </LinearLayout>
+    </android.support.v7.widget.CardView>
 
-    <TextView
-        android:id="@+id/detail_overview_textview"
-        android:layout_gravity="center_horizontal"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:textSize="20sp"
-        android:text="Twenty-two years after the events of Jurassic Park, Isla Nublar now features a fully functioning dinosaur theme park, Jurassic World, as originally envisioned by John Hammond."/>
-
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/overview_view"
+        android:layout_gravity="center"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        card_view:cardUseCompatPadding="true"
+        card_view:cardCornerRadius="4dp">
+        <LinearLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:padding="16dp">
+            <TextView
+                android:layout_gravity="left"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:textSize="22sp"
+                android:text="@string/overview"/>
+            <TextView
+                android:fontFamily="sans-serif-light"
+                android:id="@+id/detail_overview_textview"
+                android:layout_gravity="center_horizontal"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:textSize="18sp"
+                android:text="Twenty-two years after the events of Jurassic Park, Isla Nublar now features a fully functioning dinosaur theme park, Jurassic World, as originally envisioned by John Hammond."/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
 
