--- a/app/src/main/res/layout/fragment_movie_list.xml
+++ b/app/src/main/res/layout/fragment_movie_list.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:columnWidth="150dp"
-    android:numColumns="auto_fit"
+    android:numColumns="2"
     android:verticalSpacing="4dp"
     android:horizontalSpacing="4dp"
     android:stretchMode="columnWidth"
