--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -7,37 +7,117 @@
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="8dp">
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/info_view"
+        android:id="@+id/detail_poster_view"
         android:layout_gravity="center"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         card_view:cardUseCompatPadding="true"
-        card_view:cardCornerRadius="4dp">
-        <LinearLayout
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:padding="16dp">
-            <TextView
-                android:id="@+id/detail_rate_textview"
-                android:layout_gravity="left"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:textSize="22sp"
-                android:text="6.9/10"/>
+        android:elevation="2dp"
+        card_view:cardCornerRadius="2dp">
 
-            <TextView
-                android:layout_gravity="left"
-                android:id="@+id/detail_release_date_textview"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="0dp"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="2"
                 android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:textSize="22sp"
-                android:text="2015"/>
-         </LinearLayout>
+                android:paddingBottom="16dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:fontFamily="sans-serif-medium"
+                    android:id="@+id/detail_title_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="24sp"
+                    android:paddingTop="24dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:maxLines="2"
+                    android:text="Jurassic World"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingTop="8dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="14dp"
+                        android:layout_height="14dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_event_black_18dp"
+                        />
+
+                    <TextView
+                        android:fontFamily="sans-serif"
+                        android:id="@+id/detail_release_date_textview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="4dp"
+                        android:textSize="14sp"
+                        android:text="2015-06-12" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingTop="8dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="14dp"
+                        android:layout_height="14dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_star_rate_black_18dp"
+                         />
+
+                    <TextView
+                        android:fontFamily="sans-serif"
+                        android:id="@+id/detail_rate_textview"
+                        android:paddingLeft="4dp"
+                        android:layout_gravity="left"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:textSize="14sp"
+
+                        android:text="6.9/10"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/detail_poster_imageview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="fitStart"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/placeholderposter" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
@@ -47,25 +127,33 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         card_view:cardUseCompatPadding="true"
-        card_view:cardCornerRadius="4dp">
+        android:elevation="2dp"
+        card_view:cardCornerRadius="2dp">
         <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:orientation="vertical">
             <TextView
+                android:fontFamily="sans-serif-medium"
+                android:textSize="24sp"
+                android:paddingTop="24dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 android:layout_gravity="left"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:textSize="22sp"
                 android:text="@string/overview"/>
             <TextView
-                android:fontFamily="sans-serif-light"
+                android:fontFamily="sans-serif"
+                android:paddingTop="8dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingBottom="24dp"
                 android:id="@+id/detail_overview_textview"
                 android:layout_gravity="center_horizontal"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 android:text="Twenty-two years after the events of Jurassic Park, Isla Nublar now features a fully functioning dinosaur theme park, Jurassic World, as originally envisioned by John Hammond."/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
