--- a/app/src/main/res/layout/activity_movie_list.xml
+++ b/app/src/main/res/layout/activity_movie_list.xml
@@ -1,7 +1,7 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/movie_list"
-    android:name="com.nex3z.popularmovies.MovieListFragment"
+    android:name="com.nex3z.popularmovies.ui.fragment.MovieListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="0dp"
