Fix ListView scroll issue with NestedScrollView

--- a/app/src/main/res/layout/fragment_video_list.xml
+++ b/app/src/main/res/layout/fragment_video_list.xml
@@ -1,11 +1,19 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.nex3z.popularmovies.ui.activity.MovieDetailActivity">
+    android:layout_gravity="fill_vertical"
+    android:fillViewport="true">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <ListView
         android:id="@+id/video_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@null" />
-</FrameLayout>
+</LinearLayout>
+</android.support.v4.widget.NestedScrollView>
