--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -1,7 +1,14 @@
-<LinearLayout
+<android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/movie_detail_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior" >
+
+<LinearLayout
+
     android:id="@+id/detail_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -141,3 +148,4 @@
     </LinearLayout>
 
 </LinearLayout>
+</android.support.v4.widget.NestedScrollView>
