--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,4 +34,11 @@
         <item name="android:lineSpacingMultiplier">1.1</item>
     </style>
 
+    <style name="DetailInfoIcon">
+        <item name="android:layout_width">14dp</item>
+        <item name="android:layout_height">14dp</item>
+        <item name="android:layout_gravity">top</item>
+        <item name="android:layout_marginTop">3dp</item>
+    </style>
+
 </resources>
