--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -65,9 +65,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="14dp"
-                    android:layout_height="14dp"
-                    android:layout_gravity="center"
+                    style="@style/DetailInfoIcon"
                     android:src="@drawable/ic_event_black_18dp" />
 
                 <TextView
@@ -89,9 +87,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="14dp"
-                    android:layout_height="14dp"
-                    android:layout_gravity="center"
+                    style="@style/DetailInfoIcon"
                     android:src="@drawable/ic_star_rate_black_18dp" />
 
                 <TextView
@@ -114,9 +110,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="14dp"
-                    android:layout_height="14dp"
-                    android:layout_gravity="center"
+                    style="@style/DetailInfoIcon"
                     android:src="@drawable/ic_label_black_18dp" />
 
                 <TextView
