Add favourite button.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,6 +34,13 @@
         <item name="android:lineSpacingMultiplier">1.1</item>
     </style>
 
+    <style name="PosterFavouriteIcon">
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingRight">8dp</item>
+    </style>
+
     <style name="DetailInfoIcon">
         <item name="android:layout_width">14dp</item>
         <item name="android:layout_height">14dp</item>
