--- a/app/src/main/res/layout/poster_item.xml
+++ b/app/src/main/res/layout/poster_item.xml
@@ -7,31 +7,42 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        card_view:cardCornerRadius="2dp"
-        >
+        card_view:cardCornerRadius="2dp" >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical" >
 
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="200dp"
+                android:layout_height="300dp"
                 android:scaleType="centerCrop"
                 android:adjustViewBounds="true"
                 android:id="@+id/poster_image"
-                android:src="@drawable/placeholder_poster"
-                />
+                android:src="@drawable/placeholder_poster" />
 
-            <TextView
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
 
-                style="@style/PosterTitleText"
-                android:textSize="16sp"
-                android:id="@+id/poster_title"
-                android:text="Jurassic World"
-                />
+                <TextView
+                    style="@style/PosterTitleText"
+                    android:layout_weight="1"
+                    android:textSize="16sp"
+                    android:id="@+id/poster_title"
+                    android:text="Jurassic World" />
+
+                <ImageButton
+                    android:layout_height="32dp"
+                    android:layout_width="32dp"
+                    android:layout_gravity="center_vertical"
+                    android:background="@null"
+                    android:src="@drawable/ic_favorite_border_black_18dp"
+                    style="@style/PosterFavouriteIcon" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
