Fix image size.

--- a/app/src/main/res/layout/poster_item.xml
+++ b/app/src/main/res/layout/poster_item.xml
@@ -15,8 +15,8 @@
             android:orientation="vertical" >
 
             <ImageView
-                android:layout_width="200dp"
-                android:layout_height="300dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 android:adjustViewBounds="true"
                 android:id="@+id/poster_image"
