--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -24,6 +24,14 @@
 
         <include layout="@layout/detail_overview" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorLighterGray"
+            />
+
+        <include layout="@layout/detail_reviews" />
+
     </LinearLayout>
 
 </FrameLayout>
