--- a/app/src/main/res/layout/detail_overview.xml
+++ b/app/src/main/res/layout/detail_overview.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:paddingBottom="16dp"
     >
 
     <TextView
